Feat: config kafka to backend